--- a/openapi/urlAnalytics.yaml
+++ b/openapi/urlAnalytics.yaml
@@ -2,9 +2,9 @@ openapi: 3.0.0
 info:
   title: GoMinifyURL analytics API
   description: Analytics api for GoMinifyURL. Uses KeyCloak for auth
-  version: 1.0.0
+  version: 1.0.1
 servers:
-  - url: https://{hostname}/analytics/
+  - url: https://{hostname}/api_analytics/
     variables:
       hostname:
         default: localhost
@@ -17,7 +17,7 @@ paths:
         Only accessible by the owner of the URL.
       operationId: getDetailedUrlStats
       security:
-        - keycloakOAuth: [openid]
+        - keycloakOAuth: [ openid, analytics:read ]
       parameters:
         - name: shortId
           in: path
@@ -57,7 +57,7 @@ paths:
         '401':
           description: Unauthorized
         '403':
-          description: Forbidden – user does not own the URL
+          description: Forbidden – user does not own the URL or User doesnt not perms to use analytics
         '404':
           description: URL not found
   /user/top:
@@ -68,7 +68,7 @@ paths:
         You can specify how many to return using the `limit` parameter (maximum: 20).
       operationId: getUserTopUrls
       security:
-        - keycloakOAuth: [openid]
+        - keycloakOAuth: [ openid,analytics:read ]
       parameters:
         - name: limit
           in: query
@@ -103,7 +103,7 @@ paths:
         Each item indicates how many users visited a given short link from a specific referrer.
       operationId: getUserReferralGraph
       security:
-        - keycloakOAuth: [openid]
+        - keycloakOAuth: [ openid,analytics:read ]
       responses:
         '200':
           description: Referral graph data
@@ -130,7 +130,7 @@ paths:
         Useful for visualizing audience location (e.g., heatmap or pie chart).
       operationId: getUserGeoSummary
       security:
-        - keycloakOAuth: [openid]
+        - keycloakOAuth: [ openid,analytics:read ]
       responses:
         '200':
           description: Country-level click summary
@@ -149,6 +149,27 @@ paths:
                       description: Number of clicks from this country
         '401':
           description: Unauthorized
+  /general:
+    get:
+      summary: Get information about entire system this path does not require oauth
+      responses:
+        200:
+          description: general information about how many users, links, and redirects
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  users:
+                    type: number
+                    description: number of users registered
+                  totalLinks:
+                    type: number
+                    description: number of Links that have been shortened
+                  totalRedirects:
+                    type: number
+                    description: Number of redirects the app has processed over its lifetime
+
 
 components:
   securitySchemes:
@@ -160,6 +181,4 @@ components:
           tokenUrl: https://keycloak.example.com/realms/gominify/protocol/openid-connect/token
           scopes:
             openid: OpenID Connect basic authentication
-
-security:
-  - keycloakOAuth: [openid]
+            analytics:read: Read perms of the analytics server
